<resources>
    <string name="app_name">Spellbook</string>
    <string name="favorites">Favorites</string>
    <string name="known">Known</string>
    <string name="prepared">Prepared</string>
    <string name="all_spells">All spells</string>
    <string name="all">All</string>
    <string name="nav_header">Spellbook</string>
    <string name="nav_sourcebooks">Sourcebooks</string>
    <string name="right_header">Spellcasting</string>
    <string name="spell_lists">Spell Lists</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="update_info">Update Info</string>
    <string name="whats_new">What\'s new</string>
    <string name="settings">Settings</string>
    <string name="name_with_count" translatable="false">%1$s (%2$s)</string>
    <string name="spell_name">Spell Name</string>
    <string name="school">School</string>
    <string name="level">Level</string>
    <string name="sort_field_1_text">Sort field 1</string>
    <string name="sort_field_2_text">Sort field 2</string>
    <string name="class_filter_text">Class filter</string>
    <string name="left_navigation_drawer_open">Left nav open</string>
    <string name="left_navigation_drawer_closed">Left nav closed</string>
    <string name="th_level">th-level</string>
    <string name="nd_level">nd-level</string>
    <string name="rd_level">rd-level</string>
    <string name="st_level">st-level</string>
    <string name="school_cantrip">%1$s cantrip</string>
    <string name="ordinal_school">%1$s %2$s</string>
    <string name="prompt">%1$s: %2$s</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="ritual">Ritual</string>
    <string name="concentration">Concentration</string>
    <string name="concentration_abbr">conc.</string>
    <string name="duration">Duration</string>
    <string name="casting_time">Casting Time</string>
    <string name="components">Components</string>
    <string name="verbal">Verbal</string>
    <string name="somatic">Somatic</string>
    <string name="material">Material</string>
    <string name="materials">Materials</string>
    <string name="royalty">Royalty</string>
    <string name="range">Range</string>
    <string name="classes">Classes</string>
    <string name="tce_expanded_classes">TCE Expanded Classes</string>
    <string name="description">Description</string>
    <string name="higher_level">At Higher Levels</string>
    <string name="spell_level">Spell Level</string>
    <string name="other_time">Other Time</string>
    <string name="finite_duration">Finite Duration</string>
    <string name="level_number">Level %1$d</string>
    <string name="spell">Spell</string>
    <string name="spell_lists_title">Spell Lists</string>
    <string name="change_character">Change Character</string>
    <string name="spell_creation">Spell Creation</string>
    <string name="create_a_spell">Create a Spell</string>
    <string name="update_spell">Update Spell</string>
    <string name="manage_homebrew_spells">Manage Homebrew Spells</string>
    <string name="character">Character</string>
    <string name="character_lowercase">character</string>
    <string name="character_selection_title">Characters</string>
    <string name="character_selection_message">Please select a character</string>
    <string name="create_new_character">Create new character</string>
    <string name="create_spell_shortcut">Create shortcut</string>
    <string name="source_management_title">Created Sources</string>
    <string name="source_selection_message">Please select a source</string>
    <string name="create_new_source">Create new source</string>
    <string name="sort_filter_selection_title">Filter status</string>
    <string name="sort_filter_selection_message">Please select a saved status</string>
    <string name="save_sort_filter_status_title">Save Status</string>
    <string name="save_sort_filter_status_message">Choose a name for this status</string>
    <string name="save_sort_filter_status_hint">Status name</string>
    <string name="status_lowercase">status</string>
    <string name="cannot_be_empty">The %1$s cannot be empty</string>
    <string name="duplicate_name">A %1$s with this name already exists</string>
    <string name="duplicate_something">A %1$s with this %2$s already exists</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="character_creation_title">Character Creation</string>
    <string name="character_creation_message">Please enter your character\'s name</string>
    <string name="character_creation_hint">Character name</string>
    <string name="create">Create</string>
    <string name="empty_name">The character name cannot be empty</string>
    <string name="character_name">character name</string>
    <string name="illegal_character">The %1$s contains an illegal character: %2$s</string>
    <string name="import_character_title">Import Character</string>
    <string name="import_from_json">Import from JSON</string>
    <string name="import_text">Import</string>
    <string name="imported_toast">Imported %1$s from JSON</string>
    <string name="json_import_error">Error importing from JSON</string>
    <string name="name_change_title">Edit Name</string>
    <string name="name_change_message">Please enter the new name for your character</string>
    <string name="name_change_hint">Character name</string>
    <string name="change">Change</string>
    <string name="selected_path_null">Selected path is null</string>
    <string name="source">source</string>
    <string name="source_capitalized">Source</string>
    <string name="source_name">source name</string>
    <string name="abbreviation">abbreviation</string>
    <string name="source_abbreviation">source abbreviation</string>
    <string name="source_creation">Source Creation</string>
    <string name="source_creation_title">Create Source</string>
    <string name="source_name_prompt">Source name:</string>
    <string name="source_creation_name_hint">Enter source name</string>
    <string name="source_creation_name_autofill_hints">Enter source name</string>
    <string name="source_abbreviation_prompt">Source abbreviation (optional):</string>
    <string name="source_abbreviation_hint">Enter abbreviation</string>
    <string name="source_abbreviation_autofill_hints">Enter abbreviation</string>
    <string name="source_abbreviation_subprompt">This is how the source will appear in spell cards (i.e. \"PHB\" instead of \"Player\'s Handbook\")<br/> If left blank, the full source name will be used.</string>
    <string name="create_source">Create Source</string>
    <string name="update_source">Update Source</string>
    <string name="import_">Import</string>
    <string name="import_json">Import JSON</string>
    <string name="or_from_clipboard">Or from the clipboard</string>
    <string name="paste_json_here">Paste JSON here</string>
    <string name="import_file">Import file</string>
    <string name="import_character_from_file">Import character from file</string>
    <string name="import_json_file">Import JSON file</string>
    <string name="import_json_from_file">Import JSON from file</string>
    <string name="import_json_text">Import JSON text</string>
    <string name="invalid_json">Submitted JSON is invalid</string>
    <string name="invalid_json_for">JSON for %1$s is invalid</string>
    <string name="content_loaded_successfully">Successfully loaded content</string>
    <string name="issues_loading_some_content">There were issues loading some of the content</string>
    <string name="import_source_title">Import Source</string>
    <string name="code">code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="yes_lower">yes</string>
    <string name="no_lower">no</string>
    <string name="search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_info">Spellcasting info</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="action_root">Spell table</string>
    <string name="action_spell_window">Spell window</string>
    <string name="action_table">Spell table</string>
    <string name="action_filter">Filter</string>
    <string name="action_slots">Manage slots</string>
    <string name="action_regain_slots">Regain spent slots</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_message">We would greatly appreciate any information on bugs, features you\'d like added, or any other feedback that you have!</string>
    <string name="feedback_hint">Enter feedback here</string>
    <string name="feedback_cancel">Cancel</string>
    <string name="feedback_send">Send</string>
    <string name="sort_title">Sorting Options</string>
    <string name="sort_field_1_prompt">First level sorting:</string>
    <string name="sort_field_2_prompt">Second level sorting:</string>
    <string name="sourcebook_filter_title">Sourcebooks</string>
    <string name="caster_filter_title">Caster Classes</string>
    <string name="school_filter_title">Schools</string>
    <string name="casting_time_type_filter_title">Casting Time</string>
    <string name="duration_type_filter_title">Duration</string>
    <string name="range_type_filter_title">Range</string>
    <string name="level_filter_title">${spell_level}</string>
    <string name="ritual_concentration_filter_title">${ritual} &amp; ${concentration}</string>
    <string name="components_filter_title">${components}</string>
    <string name="ritual_filter_title">Ritual</string>
    <string name="concentration_filter_title">Concentration</string>
    <string name="verbal_filter_title">${verbal}</string>
    <string name="somatic_filter_title">${somatic}</string>
    <string name="material_filter_title">${material}</string>
    <string name="royalty_filter_title">${royalty}</string>
    <string name="level_range_text">\u2264 ${spell_level} \u2264</string>
    <string name="casting_time_range_text">\u2264 ${other_time} \u2264</string>
    <string name="duration_range_text">\u2264 ${finite_duration} \u2264</string>
    <string name="range_range_text">\u2264 ${finite_range} \u2264</string>
    <string name="zero">0</string>
    <string name="blank"> </string>
    <string name="level_max_text">9</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="restore_defaults">Restore Default Range</string>
    <string name="restore_full_range">Restore Full Range</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="spell_creation_title">Create a Spell</string>
    <string name="spell_creation_name_prompt">Name:</string>
    <string name="spell_creation_name_hint">Enter name</string>
    <string name="spell_creation_name_autofill_hints">Enter name</string>
    <string name="spell_creation_sources_prompt">Sources:</string>
    <string name="spell_creation_school_prompt">School:</string>
    <string name="spell_creation_level_prompt">Level:</string>
    <string name="spell_creation_concentration_prompt">Concentration:</string>
    <string name="export_all_subtitle">From here you can export all of your created content (characters, spells, sources) to load into another device.</string>
    <string name="export_file">Export to File</string>
    <string name="spell_slots_title">Spell Slots</string>
    <string name="copy_json">Copy JSON</string>
    <string name="export_all_title">Export All Content</string>
    <string name="book_background_description">Book background image</string>
</resources>