<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookbackground_2">

    <group
        android:id="@+id/nav_list_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_all"
            android:title="@string/all" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/star_empty"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_prepared"
            android:icon="@mipmap/wand_empty"
            android:title="@string/prepared" />

        <item
            android:id="@+id/nav_known"
            android:icon="@mipmap/book_empty"
            android:title="@string/known" />

    </group>

    <item
        android:id="@+id/nav_character"
        >

            <menu>

                <item
                    android:id="@+id/subnav_charselect"
                    android:title="@string/change_character"
                    />

                <item
                    android:id="@+id/subnav_spell_slots"
                    android:title="@string/spell_slots_title"
                    />

            </menu>

    </item>


    <item
        android:title="@string/spell_creation"
        >
        <menu>
            <item
                android:id="@+id/create_a_spell"
                android:title="@string/create_a_spell"
                />
            <item
                android:id="@+id/manage_created_spells"
                android:title="@string/manage_created_spells"
                />
        </menu>
    </item>

    <item
        android:title="@string/feedback"
        android:id="@+id/nav_feedback_title"
        >
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/contact_us"
                />
            <item
                android:id="@+id/nav_rate_us"
                android:title="@string/rate_us"
                />
        </menu>
    </item>

    <item
        android:title="@string/update_info"
        android:id="@+id/nav_update_title"
        >
        <menu>
            <item
                android:id="@+id/nav_whats_new"
                android:title="@string/whats_new"
                >
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        />

</menu>