<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/spell_creation_title"
        android:textSize="40sp"
        android:textAlignment="center"
        android:fontFamily="@font/cloister_black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/SpellCreationPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_creation_name_prompt"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_entry"
            android:inputType="text"
            android:autofillHints="Spell name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/SpellCreationPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_creation_school_prompt"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/school_selector"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/SpellCreationPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_creation_level_prompt"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_selector"
            />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/SpellCreationPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spell_creation_concentration_prompt"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            />


    </LinearLayout>

</LinearLayout>