<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <import type="android.view.View"/>
        <variable
            name="source"
            type="dnd.jon.spellbook.Source" />
        <variable
            name="error"
            type="java.lang.String"
            />
    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/background"
            android:id="@+id/source_creation_background"
            android:layout_alignTop="@id/source_creation_internal_ll"
            android:layout_alignBottom="@id/source_creation_internal_ll"
            android:layout_alignStart="@id/source_creation_internal_ll"
            android:layout_alignEnd="@id/source_creation_internal_ll"
            android:scaleType="fitXY"
            android:contentDescription="@string/book_background_description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/source_creation_internal_ll"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:paddingHorizontal="15dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/GeneralTextStyle"
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cloister_black"
                    android:text="@string/source_creation_title"
                    android:textAlignment="center"
                    android:textSize="40sp" />

                <TextView
                    style="@style/GeneralTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/error_text"
                    android:textColor="@android:color/holo_red_dark"
                    android:textAlignment="center"
                    android:text="@{error}"
                    android:textSize="15sp"
                    android:visibility="@{error == null || error.empty ? View.GONE : View.VISIBLE}"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <Button
                        android:id="@+id/import_source_file_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/import_json_file"
                        android:background="@android:color/transparent"
                        app:layout_flexGrow="1"
                        />
                    <Button
                        android:id="@+id/import_source_text_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/import_json_text"
                        android:background="@android:color/transparent"
                        app:layout_flexGrow="1"
                        />
                </LinearLayout>

                <TextView
                    style="@style/SourceCreationPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_name_prompt"
                    />

                <EditText
                    style="@style/GeneralTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_entry"
                    android:inputType="text"
                    android:hint="@string/source_creation_name_hint"
                    android:autofillHints="@string/source_creation_name_autofill_hints"
                    android:textColorHint="@color/overlay"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    />

                <TextView
                    style="@style/SourceCreationPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_abbreviation_prompt"
                    />

                <TextView
                    style="@style/GeneralTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/source_abbreviation_subprompt"
                    />

                <EditText
                    style="@style/GeneralTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/abbreviation_entry"
                    android:inputType="text"
                    android:hint="@string/source_abbreviation_hint"
                    android:autofillHints="@string/source_abbreviation_autofill_hints"
                    android:textColorHint="@color/overlay"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/source_cancel_button"
                    android:text="@string/cancel"
                    android:background="@android:color/transparent"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_toStartOf="@id/create_source_button"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_source_button"
                    android:text="@string/create_source"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>