<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/character_import"
    android:padding="0dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/background"
        android:id="@+id/character_import_background"
        android:layout_alignTop="@id/character_import_internal_rl"
        android:layout_alignBottom="@id/character_import_internal_rl"
        android:layout_alignStart="@id/character_import_internal_rl"
        android:layout_alignEnd="@id/character_import_internal_rl"
        android:scaleType="fitXY"
        android:contentDescription="@string/book_background_description"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/character_import_internal_rl"
        android:padding="15dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/GeneralTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_title"
            android:text="@string/import_character_title"
            android:fontFamily="@font/cloister_black"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            style="@style/GeneralTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_message"
            android:text="@string/import_json_from_file"
            android:layout_below="@id/character_import_title"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_file_button"
            android:text="@string/import_json_file"
            android:layout_below="@id/character_import_message"
            android:background="@android:color/transparent"
            android:layout_centerHorizontal="true"
            />

        <TextView
            style="@style/GeneralTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_paste_message"
            android:text="@string/or_from_clipboard"
            android:layout_below="@id/character_import_file_button"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_edit_text"
            android:layout_below="@id/character_paste_message"
            android:inputType="text"
            android:hint="@string/paste_json_here"
            android:autofillHints="@string/paste_json_here"
            android:maxHeight="@dimen/dialog_edittext_max_height"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_cancel_button"
            android:text="@string/cancel"
            android:layout_below="@id/character_import_edit_text"
            android:layout_toStartOf="@id/character_import_button"
            android:background="@android:color/transparent"
            android:foreground="?android:selectableItemBackground"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/character_import_button"
            android:text="@string/import_text"
            android:layout_below="@id/character_import_edit_text"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:foreground="?android:selectableItemBackground"
            />

    </RelativeLayout>

</RelativeLayout>