<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="0dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/background"
        android:id="@+id/spell_list_export_background"
        android:layout_alignTop="@id/export_all_content_ll"
        android:layout_alignBottom="@id/export_all_content_ll"
        android:layout_alignStart="@id/export_all_content_ll"
        android:layout_alignEnd="@id/export_all_content_ll"
        android:scaleType="fitXY"
        android:contentDescription="@string/book_background_description"
        />

    <LinearLayout
        android:id="@+id/export_all_content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/GeneralTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cloister_black"
            android:gravity="center_horizontal"
            android:text="@string/export_all_title"
            android:textSize="@dimen/export_all_content_title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_all_subtitle"
            />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            app:flexDirection="row"
            app:justifyContent="space_around"
            >

            <Button
                android:id="@+id/export_content_clipboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/copy_json" />

            <Button
                android:id="@+id/export_content_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/export_file" />

        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/export_content_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/cancel"
                android:layout_gravity="end"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>